Improve css, solve horizontal scrolling

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -8,6 +8,8 @@ body {
 
 .logo {
     font-family: 'Montserrat', sans-serif;
+    font-size: 150%;
+    margin-left: 2%;
 }
 
 #navbar {
@@ -19,8 +21,10 @@ body {
 }
 
 .flashes h4 {
-    background-color: #0075a2;
+    background-color: #3066be;
+    color: #fbfaf8;
     line-height: 2;
+    text-align: center;
 }
 
 .form-group {
@@ -29,12 +33,24 @@ body {
 }
 
 label {
+    font-size: 120%;
+    font-weight: bold;
     color: #0a122a;
+}
+
+#query {
+    margin-bottom: 2%;
+}
+
+.form-check {
+    margin-left: 2%;
 }
 
 .page-title {
     text-transform: capitalize;
     text-align: center;
+    margin-top: 2%;
+    margin-bottom: 2%;
 }
 
 .card-img-top { 
@@ -66,9 +82,13 @@ label {
 .cancel-delete-btn {
     background-color: #a00005;
     color: #fbfaf8;
+    margin-top: 3%;
+    margin-bottom: 3%;
 }
 
 .add-edit-save-btn {
     background-color: #3066be;
     color: #fbfaf8;
+    margin-top: 3%;
+    margin-bottom: 3%;
 }
